<resources>
    <string name="app_name">DeliEat</string>
    <string name="welcome_message">Welcome to DeliEat!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="login_fail_msg">Login failed!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="restaurant_name_hint">Restaurant Name</string>
    <string name="cook_time_hint">Cook Time</string>
    <string name="campus_hint">Campus</string>
</resources>
